# eia-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  dev.py  imple.py  llm_generator.py  main.py  rag_client.py  schemas.py
