[project]
name = "eia-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx==0.25.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "groq>=0.5.0",
]
